[gd_scene load_steps=4 format=3]

[ext_resource type="Script" path="res://addons/gddialog/ui/ui_database_editor/ui_vbc_managers/ui_vbc_float_manager/ui_float_row/ui-float-row.gd" id="1_6knrp"]
[ext_resource type="Script" path="res://addons/gddialog/ui/ui_database_editor/ui_vbc_managers/ui_vbc_float_manager/ui_float_row/signals/signals-ui-float-row.gd" id="2_pgagl"]


[sub_resource type="ImageTexture" id="ImageTexture_nec8l"]

[node name="FloatRow" type="ColorRect"]
custom_minimum_size = Vector2(0, 31)
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
size_flags_horizontal = 3
color = Color(0, 0, 0, 0.156863)
script = ExtResource("1_6knrp")

[node name="Signals" type="Node" parent="."]
script = ExtResource("2_pgagl")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LineEditFloatName" type="LineEdit" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "string name"

[node name="SpinBoxDefaultValue" type="SpinBox" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.6
theme_override_icons/updown = SubResource("ImageTexture_nec8l")
step = 0.001
allow_greater = true
allow_lesser = true
alignment = 2

[node name="ButtonDeleteFloat" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = " üóëÔ∏è "

[connection signal="focus_entered" from="HBoxContainer/LineEditFloatName" to="Signals" method="_on_line_edit_float_name_focus_entered"]
[connection signal="focus_exited" from="HBoxContainer/LineEditFloatName" to="Signals" method="_on_line_edit_float_name_focus_exited"]
[connection signal="text_submitted" from="HBoxContainer/LineEditFloatName" to="Signals" method="_on_line_edit_float_name_text_submitted"]
[connection signal="value_changed" from="HBoxContainer/SpinBoxDefaultValue" to="Signals" method="_on_spin_box_default_value_value_changed"]
[connection signal="pressed" from="HBoxContainer/ButtonDeleteFloat" to="Signals" method="_on_button_delete_string_pressed"]
